<resources>
    <string name="app_name">Magnify Glass</string>

    <string name="permission">Permissions Required</string>
    <string name="allowpermission">Allow Permission</string>
    <string name="notpermission">NOT ALOW</string>
    <string name="submit">Submit</string>
    <string name="getstarted">Get Started</string>
    <string name="magnifyingglass">Magnifying Glass</string>

    <string name="factor_value">Magnification Factor: %.2f</string>
    <string name="radius_value">Loupe Radius: %d</string>

    <string name="open">open</string>
    <string name="image">image</string>
    <string name="close">close</string>
    <string name="rate_us">Rate Us</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="background">background</string>
    <string name="share">Share</string>
    <string name="menu_button">Menu Button</string>
    <string name="magnifying_glass">Magnifying Glass</string>
    <string name="live_magnifier">Live Magnifier</string>
    <string name="image_magnifier">Image Magnifier</string>
    <string name="price">Price</string>
    <string name="auto_charged_on_monthly_basis">Auto Charged on monthly basis</string>
    <string name="ad_attribution">Ad</string>
    <string name="this_that">this that</string>
    <string name="permissions">Permissions</string>
    <string name="_10x">0x</string>
    <string name="flash">Flash</string>
    <string name="change_camera">Change Camera</string>
    <string name="sun">Sun</string>
    <string name="moon">Moon</string>
    <string name="seek_bar">Seek Bar</string>
    <string name="zoom">Zoom</string>
    <string name="draw">draw</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="back">Back</string>
    <string name="rotate_image">Rotate Image</string>
    <string name="magnificent_factor">Magnifying Factor</string>
    <string name="loupe_radius">Loupe Radius</string>
    <string name="selector">selector</string>
    <string name="permissionText1">For a better experience, the app will require a set of permissions. Please grant them for best possible experience. Thanks</string>
    <string name="permission1">Access to the internal storage of the device for storing images or data</string>
    <string name="permission2">Access to the Camera/Media</string>
    <string name="permission3">We don\'t need any additional permissions</string>
    <string name="shareText">Start Using Magnifying Glass today with \"Magnifying Glass with Page Magnifier &amp; Flashlight\" - Download here: https://play.google.com/store/apps/details?id=</string>
    <string name="contentDescription">content_description</string>
    <string name="get_started">Get Started</string>
    <string name="home_live_magnifier">Live\nMagnifier</string>
    <string name="home_image_magnifier">Image\nMagnifier</string>
    <string name="saved_files_home">Saved\nFiles</string>
    <string name="install">install</string>
    <string name="ad_app_icon">ad app icon</string>
    <string name="_0x">0x</string>
    <string name="_0">0</string>
    <string name="_50">50</string>
    <string name="feedbackemail">toolplaza7@gmail.com</string>

    <string name="cancel">Cancel</string>
    <string name="rate_heading_text">Thank you for using our app!</string>
    <string name="tell_your_experience">Did you find our app helpful and convenient? Let others know by rating us!</string>
    <string name="clear_all">Clear All</string>
    <string name="add_image">Add Image</string>
    <string name="select_your_option">Select Your Option</string>
    <string name="unlimited_access">Unlimited Access</string>
    <string name="subscribe_on_just_one_click">Subscribe on just one click</string>
    <string name="rs_550_00">Rs 550.00 |</string>
    <string name="per_month">Per Month</string>
    <string name="subscribe">Subscribe</string>
    <string name="auto_renewal_on_monthly_basis">Auto Renewal on monthly basis</string>
    <string name="_x">X</string>
    <string name="exit">Exit</string>
    <string name="the_permissions_include">The permissions include:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_url">https://appdoctors7.blogspot.com/2017/12/app-doctors-privacy-policy.html</string>
    <string name="home">Home</string>
    <string name="saved_files">Saved Files</string>

    <string name="delete">Delete</string>
    <string name="pref_db">magnifying_glass_db</string>
    <string name="save_image">Save</string>
    <string name="save_image2">Save Image</string>
    <string name="enter_image_name">Enter image name</string>
    <string name="sort">sort</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="premium_package">Premium Package</string>
    <string name="icon">icon</string>
    <string name="loading">loading…</string>
</resources>
