<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="@dimen/_178sdp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/contentDescription"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/ivImage"
        android:src="@drawable/ic_rate_us"
        android:layout_height="@dimen/_147sdp"/>

    <TextView
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ivImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/tvTitle"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/black"
        android:text="@string/rate_heading_text"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="335dp"
        android:layout_height="68dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/tell_your_experience"
        android:textColor="@color/textcolor"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintWidth_percent="0.8" />


    <me.zhanghai.android.materialratingbar.MaterialRatingBar
        android:id="@+id/rateUsRatingBar"
        style="@style/Widget.MaterialRatingBar.RatingBar"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:numStars="5"
        android:rating="5"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:stepSize="1"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDesc"
        app:layout_constraintWidth_percent="0.6"
        app:mrb_progressBackgroundTint="@color/rating_bar"
        app:mrb_progressTint="@color/rating_bar" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="196dp"
        android:layout_height="42dp"
        android:background="@drawable/rate_us_button_drawable"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="443dp"
        tools:ignore="MissingConstraints" />

    <View
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/btnSubmit"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_height="0.1dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
