<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="414dp"
        android:layout_height="104dp"
        android:background="#2C444E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/icbackc"
            android:layout_width="@dimen/home_small_icons_size"
            android:layout_height="@dimen/home_small_icons_size"
            android:layout_marginStart="28dp"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/back"
            android:elevation="@dimen/_8sdp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="NotSibling" />

        <ImageView
            android:id="@+id/ivShareImage"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginStart="344dp"
            android:layout_marginTop="52dp"
            android:contentDescription="@string/gallery"
            android:src="@drawable/ic_share"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="190dp"
            android:layout_height="46dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="76dp"
            android:layout_marginTop="@dimen/_30sdp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/ivDeleteImg"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="308dp"
            android:layout_marginTop="52dp"
            android:contentDescription="@string/clear_all"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_delete" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="408dp"
        android:layout_height="629dp"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="102dp"
        tools:ignore="MissingConstraints">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_250sdp"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
